--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/mrnexeon/preview-demo#readme",
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "forge-apis": "^0.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^1.17.3"
   }
 }
