--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "forge-apis": "^0.4.1"
   },
   "devDependencies": {
-    "nodemon": "^1.17.3",
     "css-loader": "^0.28.11",
-    "webpack": "^4.6.0"
+    "nodemon": "^1.17.3",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.1.2"
   }
 }
